traefik/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: traefik
    release: traefik
  name: traefik-ingress-service
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik
  ports:
    - name: web
      nodePort: 31909
      port: 80
      protocol: TCP
      targetPort: 80
    - name: websecure
      nodePort: 30584
      port: 443
      protocol: TCP
      targetPort: 443
    - name: admin
      nodePort: 32316
      port: 8100
      protocol: TCP
      targetPort: 8100
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
